# symbion

./: .gitignore  Anchor.toml  Cargo.toml  README.md  VALIDATION_CHECKLIST.md  docker-compose.yml
.github/workflows/: backend-tests.yml  firmware-tests.yml  integration-tests.yml  mobile-tests.yml  release.yml
cloud-backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
cloud-backend/docs/api/: openapi.yaml
cloud-backend/src/: server.js
cloud-backend/src/__tests__/: analytics.test.js  api.integration.test.js  auth.test.js
cloud-backend/src/config/: database.js  swagger.js
cloud-backend/src/models/: User.js  (+2 more)
docs/regulatory/: CE_TECHNICAL_DOCUMENTATION.md  FCC_COMPLIANCE_REPORT.md  FDA_510k_SUMMARY.md  ISO13485_QUALITY_MANUAL.md  RISK_MANAGEMENT_FILE.md
docs/technical/: ARCHITECTURE.md
firmware/: platformio.ini
firmware/include/: aes.h  ble_comms.h  device_info.h  key_manager.h  power_manager.h  sensor_manager.h  signal_processing.h
firmware/src/: aes.cpp  ble_comms.cpp  device_info.cpp  key_manager.cpp  main.cpp  power_manager.cpp  sensor_manager.cpp  signal_processing.cpp
firmware/test/: test_aes.cpp  test_ble_comms.cpp  test_power_manager.cpp  test_sensor_manager.cpp  test_signal_processing.cpp
hardware/: README.md
hardware/bom/: component_specs.md  symbion_bom.csv
hardware/schematics/: symbion.kicad_pro  symbion.kicad_sch
mobile-app/: package-lock.json  package.json
mobile-app/__tests__/: BLEService.test.js
mobile-app/src/: App.js
programs/symbion/: Cargo.toml
programs/symbion/src/: lib.rs
tests/: README.md
(+31 files in other folders)
