[package]
name = "symbion"
version = "0.1.0"
description = "SYMBION — Solana/Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "symbion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
